play/style.css
#square {
    width: 100px;
    height: 100px;
    border: 0px solid black;
    display: block;

    position: absolute;
    z-index: 2;
}

.circle{
    width: 50px;
    height: 50px;
    display: block;

    position: absolute;
    z-index: 1;
}

#UI-top{
    top: 0px;
    right: 0px;
    position: fixed;
    z-index: 3;
}

#progress-container{
    margin: 0;
    position: fixed;
    top: 0px;
    right: 0px;

    height: 1%;
    width: 100%;
}

#progress-time{
    position: absolute;
    top: 0;
    right: 0;

    background-color: rgba(200,60,75,0.7);

    height: 100%;


}

#score{
    text-align: right;
    margin: 8;
    
    font-family: monospace, sans-serif, Helvetica;
    font-size: 2em;
}

